--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "sequelize": "^5.2.15"
+    "sequelize": ">=5.3.0"
   },
   "homepage": "https://github.com/3mhurley/AnneAndTheThreeStooges#readme"
 }
