--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "mysql2": "^1.6.5",
     "sequelize": "^5.2.15"
   },
   "homepage": "https://github.com/3mhurley/AnneAndTheThreeStooges#readme"
